--- a/helm/datadog/values.yaml
+++ b/helm/datadog/values.yaml
@@ -1,3 +1,8 @@
+# Enable Kyverno PolicyException
+kyvernoPolicyExceptions:
+  enabled: true
+  namespace: giantswarm
+
 datadog:
   datadog:
     kubelet:
@@ -14,6 +19,8 @@ datadog:
 
   agents:
     podSecurity:
+      apparmor:
+        enabled: false
       podSecurityPolicy:
         create: true
       securityContext:
@@ -22,9 +29,6 @@ datadog:
         seLinuxOptions: {}
       seccompProfiles:
       - "runtime/default"
-
-      apparmor:
-        enabled: false
     
     containers:
       agent: 
