--- a/helm/datadog/templates/kyverno-policy-exception.yaml
+++ b/helm/datadog/templates/kyverno-policy-exception.yaml
@@ -7,7 +7,7 @@ metadata:
     "helm.sh/hook": "pre-install,pre-upgrade"
   labels:
     {{ include "datadog.labels" . | nindent 4 }}
-  name: {{ template "datadog.fullname" . }}-cluster-agent
+  name: {{ template "datadog.fullname" . }}-cluster-agent-exceptions
   namespace: {{ .Values.kyvernoPolicyExceptions.namespace | default .Release.Namespace }}
 spec:
   exceptions:
@@ -46,7 +46,7 @@ metadata:
     "helm.sh/hook": "pre-install,pre-upgrade"
   labels:
     {{ include "datadog.labels" . | nindent 4 }}
-  name: {{ template "datadog.fullname" . }}
+  name: {{ template "datadog.fullname" . }}-exceptions
   namespace: {{ .Values.kyvernoPolicyExceptions.namespace | default .Release.Namespace }}
 spec:
   exceptions:
